--- a/src/popup.html
+++ b/src/popup.html
@@ -1,16 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8" />
-<title>Prompt Enhancer</title>
-<style> body{font-family:Arial;padding:12px;width:320px;} </style>
-</head>
-<body>
-<h3>Prompt Enhancer</h3>
-<p>Unlock your key to use the enhancer for this browser session.</p>
-<input id="pass" type="password" placeholder="Passphrase" style="width:100%" />
-<button id="unlock">Unlock</button>
-<p id="msg"></p>
-<script src="src/popup.js"></script>
+<body style="padding:15px; font-family:Arial; width: 250px;">
+  <h3>Prompt Enhancer</h3>
+
+  <div id="enter-key-view">
+    <input id="apiKey" placeholder="Enter Gemini API key" style="width:100%; padding:6px; box-sizing: border-box;">
+    <button id="saveKey" style="margin-top:10px; width:100%; padding:8px;">Save Key</button>
+  </div>
+
+  <div id="key-saved-view" style="display: none;">
+    <p>API Key is saved.</p>
+    <button id="removeKey" style="margin-top:10px; width:100%; padding:8px;">Remove Key</button>
+  </div>
+
+  <script src="popup.js"></script>
 </body>
 </html>
